; ModuleID = '/home/carl/AnghaBench/reactos/dll/cpl/desk/extr_screensaver.c_SelectionChanged.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/cpl/desk/extr_screensaver.c_SelectionChanged.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 }

@IDC_SCREENS_LIST = common dso_local global i32 0, align 4
@CB_GETCURSEL = common dso_local global i32 0, align 4
@CB_GETITEMDATA = common dso_local global i32 0, align 4
@IDC_SCREENS_SETTINGS = common dso_local global i32 0, align 4
@IDC_SCREENS_TESTSC = common dso_local global i32 0, align 4
@IDC_SCREENS_USEPASSCHK = common dso_local global i32 0, align 4
@IDC_SCREENS_TIMEDELAY = common dso_local global i32 0, align 4
@IDC_SCREENS_TIME = common dso_local global i32 0, align 4
@IDC_WAITTEXT = common dso_local global i32 0, align 4
@IDC_MINTEXT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, %struct.TYPE_3__*)* @SelectionChanged to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @SelectionChanged(i32 %0, %struct.TYPE_3__* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  store i32 %0, i32* %4, align 4
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %5, align 8
  %9 = load i32, i32* %4, align 4
  %10 = load i32, i32* @IDC_SCREENS_LIST, align 4
  %11 = call i32 @GetDlgItem(i32 %9, i32 %10)
  store i32 %11, i32* %6, align 4
  %12 = load i32, i32* %6, align 4
  %13 = load i32, i32* @CB_GETCURSEL, align 4
  %14 = call i64 @SendMessage(i32 %12, i32 %13, i64 0, i32 0)
  store i64 %14, i64* %8, align 8
  %15 = load i32, i32* %6, align 4
  %16 = load i32, i32* @CB_GETITEMDATA, align 4
  %17 = load i64, i64* %8, align 8
  %18 = call i64 @SendMessage(i32 %15, i32 %16, i64 %17, i32 0)
  store i64 %18, i64* %8, align 8
  %19 = load i64, i64* %8, align 8
  %20 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %20, i32 0, i32 0
  store i64 %19, i64* %21, align 8
  %22 = load i64, i64* %8, align 8
  %23 = icmp ne i64 %22, 0
  %24 = zext i1 %23 to i32
  store i32 %24, i32* %7, align 4
  %25 = load i32, i32* %4, align 4
  %26 = load i32, i32* @IDC_SCREENS_SETTINGS, align 4
  %27 = call i32 @GetDlgItem(i32 %25, i32 %26)
  %28 = load i32, i32* %7, align 4
  %29 = call i32 @EnableWindow(i32 %27, i32 %28)
  %30 = load i32, i32* %4, align 4
  %31 = load i32, i32* @IDC_SCREENS_TESTSC, align 4
  %32 = call i32 @GetDlgItem(i32 %30, i32 %31)
  %33 = load i32, i32* %7, align 4
  %34 = call i32 @EnableWindow(i32 %32, i32 %33)
  %35 = load i32, i32* %4, align 4
  %36 = load i32, i32* @IDC_SCREENS_USEPASSCHK, align 4
  %37 = call i32 @GetDlgItem(i32 %35, i32 %36)
  %38 = load i32, i32* %7, align 4
  %39 = call i32 @EnableWindow(i32 %37, i32 %38)
  %40 = load i32, i32* %4, align 4
  %41 = load i32, i32* @IDC_SCREENS_TIMEDELAY, align 4
  %42 = call i32 @GetDlgItem(i32 %40, i32 %41)
  %43 = load i32, i32* %7, align 4
  %44 = call i32 @EnableWindow(i32 %42, i32 %43)
  %45 = load i32, i32* %4, align 4
  %46 = load i32, i32* @IDC_SCREENS_TIME, align 4
  %47 = call i32 @GetDlgItem(i32 %45, i32 %46)
  %48 = load i32, i32* %7, align 4
  %49 = call i32 @EnableWindow(i32 %47, i32 %48)
  %50 = load i32, i32* %4, align 4
  %51 = load i32, i32* @IDC_WAITTEXT, align 4
  %52 = call i32 @GetDlgItem(i32 %50, i32 %51)
  %53 = load i32, i32* %7, align 4
  %54 = call i32 @EnableWindow(i32 %52, i32 %53)
  %55 = load i32, i32* %4, align 4
  %56 = load i32, i32* @IDC_MINTEXT, align 4
  %57 = call i32 @GetDlgItem(i32 %55, i32 %56)
  %58 = load i32, i32* %7, align 4
  %59 = call i32 @EnableWindow(i32 %57, i32 %58)
  %60 = load i32, i32* %3, align 4
  ret i32 %60
}

declare dso_local i32 @GetDlgItem(i32, i32) #1

declare dso_local i64 @SendMessage(i32, i32, i64, i32) #1

declare dso_local i32 @EnableWindow(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
